Fix alignment

--- a/src/client/components/molecules/office-contact-modal/office-contact-modal.scss
+++ b/src/client/components/molecules/office-contact-modal/office-contact-modal.scss
@@ -147,7 +147,7 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
   margin-top: 20px;
 }
 
